--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "devDependencies": {
-    "@types/parsimmon": "^1.10.6",
     "bun-types": "^0.7.0"
   },
   "dependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
+    "arcsecond": "^5.0.0",
     "chalk": "^5.3.0",
-    "commander": "^11.0.0",
-    "ts-reset": "^0.0.1"
+    "commander": "^11.0.0"
   }
 }
