--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "devDependencies": {
-    "bun-types": "^0.7.0"
-  },
-  "dependencies": {
-    "@total-typescript/ts-reset": "^0.4.2",
-    "arcsecond": "^5.0.0",
-    "chalk": "^5.3.0",
-    "commander": "^11.0.0"
-  }
+    "devDependencies": {
+        "bun-types": "^0.7.0"
+    },
+    "dependencies": {
+        "chalk": "^5.3.0"
+    }
 }
